# vessel_segmentation

./: 1.ipynb  README.md  package-lock.json  package.json  pyproject.toml  report.ipynb
VesselBoost/: .gitignore  main.ipynb
data_unlabeled/: CHANGES  dataset_description.json  participants.tsv
data_unlabeled/derivatives/N4_bias_field_corrected/: dataset_description.json
data_unlabeled/derivatives/N4_bias_field_corrected/sub-002/ses-20110127/anat/: sub-002_ses-20110127_desc-angio_N4bfc_mask.json
ds003949-download/: README  participants.json
ds003949-download/code/: github_repository
ds003949-download/derivatives/N4_bias_field_corrected/sub-005/ses-20101215/anat/: sub-005_ses-20101215_desc-angio_N4bfc_mask.json
ds003949-download/derivatives/N4_bias_field_corrected/sub-007/ses-20101225/anat/: sub-007_ses-20101225_desc-angio_N4bfc_brain_mask.json
