[tool.poetry]
name = "neuro-projekt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-image = "^0.25.0"
numpy = "^2.2.1"
pandas = "^2.2.3"
jupyterlab-vim = "^4.1.4"
jupyterlab-git = "^0.50.2"
nibabel = "^5.3.2"
matplotlib = "^3.10.0"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
